--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="bio">
                         <h3>// User Bio</h3>
                         <p>
-                            I am a {{Software engineering}} student at {{VIT-AP}} (Class of {{2030}}).
+                            I am a Software engineering student at VIT-AP Class of 2030.
                             Passionate about building scalable systems and intuitive interfaces. 
                             My focus is on efficiency, clean code, and solving complex algorithmic problems.
                         </p>
