--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>
                             I am a Software engineering student at VIT-AP Class of 2030.
                             Passionate about building scalable systems and intuitive interfaces. 
-                            My focus is on efficiency, clean code, and solving complex algorithmic problems.
+                            My focus is on efficiency, clean code, and solving complex algorithmic problems and challenges.
                         </p>
                         <div class="interests">
                             <h4>// Interests.json</h4>
